<resources>
    <string name="app_name">Count it</string>
    <string name="signout">Cerrar sesión</string>
    <string name="userhint">Correo</string>
    <string name="passwordhint">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="user">Usuario</string>
    <string name="confirmpassword">Confirmar contraseña</string>
    <string name="email">Correo</string>
    <string name="register">Registrarse</string>
    <string name="descriptionhint">Descripción</string>
    <string name="quantityhint">Cantidad</string>
    <string name="pricehint">Precio</string>
    <string name="save">Guardar</string>
    <string name="required">Requerido</string>
    <string name="total">Total de la compra</string>
    <string name="emptybuy">No has agregado nada al carrito</string>
    <string name="alert_dialog">Eliminar producto</string>
    <string name="buy_list">Lista de compras</string>
    <string name="alert_message">¿Desea eliminar este producto?</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="edit_product">Editar producto</string>
    <string name="add_product">Añadir producto</string>
    <string name="search">Buscar</string>
</resources>
